syntax = "proto3";
package sonrio.sonr.object;
option go_package = "github.com/sonr-io/blockchain/x/object/types";

// ObjectDoc is a document for an Object stored in the graph.
message ObjectDoc {
    // Label is human-readable name of the bucket.
    string label = 1;

    // Description is a human-readable description of the bucket.
    string description = 2;

    // Did is the identifier of the object.
    string did = 3;

    // Bucket is the did of the bucket that contains this object.
    string bucket_did = 4; // optional

    // Fields are the fields associated with the object.
   repeated TypeField fields = 5;
}

message TypeField {
    // Name is the name of the field.
    string name = 1;

    // Type is the type of the field.
    TypeKind kind = 2;
}

enum TypeKind {
    TypeKind_Invalid = 0;
	TypeKind_Map   = 1;
	TypeKind_List    = 2;
	TypeKind_Unit    = 3;
	TypeKind_Bool    = 4;
	TypeKind_Int     = 5;
	TypeKind_Float   = 6;
	TypeKind_String  = 7;
	TypeKind_Bytes   = 8;
	TypeKind_Link    = 9;
	TypeKind_Struct  = 10;
	TypeKind_Union   = 11;
	TypeKind_Enum    = 12;
	TypeKind_Any     = 13;
}
